// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dual list component is rendered correctly 1`] = `
<WrappedDualList
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "key3",
      ],
    }
  }
  options={
    Array [
      Object {
        "key": "key1",
        "label": "text1",
      },
      Object {
        "key": "key2",
        "label": "text2",
      },
      Object {
        "key": "key3",
        "label": "text3",
      },
      Object {
        "key": "key4",
        "label": "text4",
      },
    ]
  }
>
  <DualList
    allToLeft={false}
    allToRight={false}
    input={
      Object {
        "onChange": [MockFunction],
        "value": Array [
          "key3",
        ],
      }
    }
    isEqual={[Function]}
    leftTitle="Options"
    meta={Object {}}
    moveAllLeftTitle="Move all to left"
    moveAllRightTitle="Move all to right"
    moveLeftTitle="Move selected to left"
    moveRightTitle="Move selected to right"
    options={
      Array [
        Object {
          "key": "key1",
          "label": "text1",
        },
        Object {
          "key": "key2",
          "label": "text2",
        },
        Object {
          "key": "key3",
          "label": "text3",
        },
        Object {
          "key": "key4",
          "label": "text4",
        },
      ]
    }
    rightTitle="Selected"
    size={15}
    subscription={
      Object {
        "error": true,
        "pristine": true,
        "value": true,
      }
    }
  >
    <div
      className="dual-list"
    >
      <Grid
        bsClass="container"
        componentClass="div"
        fluid={true}
      >
        <div
          className="container-fluid"
        >
          <Row
            bsClass="row"
            componentClass="div"
          >
            <div
              className="row"
            >
              <Col
                bsClass="col"
                componentClass="div"
                md={5}
              >
                <div
                  className="col-md-5"
                >
                  Options
                  <List
                    optionClick={[Function]}
                    size={15}
                    value={
                      Array [
                        Object {
                          "key": "key1",
                          "label": "text1",
                        },
                        Object {
                          "key": "key2",
                          "label": "text2",
                        },
                        Object {
                          "key": "key4",
                          "label": "text4",
                        },
                      ]
                    }
                  >
                    <select
                      className="form-control list"
                      multiple={true}
                      size={15}
                    >
                      <option
                        key="key1"
                        onClick={[Function]}
                        value="key1"
                      >
                        text1
                      </option>
                      <option
                        key="key2"
                        onClick={[Function]}
                        value="key2"
                      >
                        text2
                      </option>
                      <option
                        key="key4"
                        onClick={[Function]}
                        value="key4"
                      >
                        text4
                      </option>
                    </select>
                  </List>
                </div>
              </Col>
              <Col
                bsClass="col"
                className="buttons-block"
                componentClass="div"
                md={2}
              >
                <div
                  className="buttons-block col-md-2"
                >
                  <div
                    className="spacer"
                  />
                  <div
                    className="spacer"
                  />
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move selected to right"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move selected to right"
                      type="button"
                    >
                      <Icon
                        name="angle-right"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-right"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-right fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move selected to left"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move selected to left"
                      type="button"
                    >
                      <Icon
                        name="angle-left"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-left"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-left fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                </div>
              </Col>
              <Col
                bsClass="col"
                componentClass="div"
                md={5}
              >
                <div
                  className="col-md-5"
                >
                  Selected
                  <List
                    optionClick={[Function]}
                    size={15}
                    value={
                      Array [
                        Object {
                          "key": "key3",
                          "label": "text3",
                        },
                      ]
                    }
                  >
                    <select
                      className="form-control list"
                      multiple={true}
                      size={15}
                    >
                      <option
                        key="key3"
                        onClick={[Function]}
                        value="key3"
                      >
                        text3
                      </option>
                    </select>
                  </List>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Grid>
    </div>
  </DualList>
</WrappedDualList>
`;

exports[`Dual list component is rendered correctly with move all buttons 1`] = `
<WrappedDualList
  allToLeft={true}
  allToRight={true}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "key3",
      ],
    }
  }
  options={
    Array [
      Object {
        "key": "key1",
        "label": "text1",
      },
      Object {
        "key": "key2",
        "label": "text2",
      },
      Object {
        "key": "key3",
        "label": "text3",
      },
      Object {
        "key": "key4",
        "label": "text4",
      },
    ]
  }
>
  <DualList
    allToLeft={true}
    allToRight={true}
    input={
      Object {
        "onChange": [MockFunction],
        "value": Array [
          "key3",
        ],
      }
    }
    isEqual={[Function]}
    leftTitle="Options"
    meta={Object {}}
    moveAllLeftTitle="Move all to left"
    moveAllRightTitle="Move all to right"
    moveLeftTitle="Move selected to left"
    moveRightTitle="Move selected to right"
    options={
      Array [
        Object {
          "key": "key1",
          "label": "text1",
        },
        Object {
          "key": "key2",
          "label": "text2",
        },
        Object {
          "key": "key3",
          "label": "text3",
        },
        Object {
          "key": "key4",
          "label": "text4",
        },
      ]
    }
    rightTitle="Selected"
    size={15}
    subscription={
      Object {
        "error": true,
        "pristine": true,
        "value": true,
      }
    }
  >
    <div
      className="dual-list"
    >
      <Grid
        bsClass="container"
        componentClass="div"
        fluid={true}
      >
        <div
          className="container-fluid"
        >
          <Row
            bsClass="row"
            componentClass="div"
          >
            <div
              className="row"
            >
              <Col
                bsClass="col"
                componentClass="div"
                md={5}
              >
                <div
                  className="col-md-5"
                >
                  Options
                  <List
                    optionClick={[Function]}
                    size={15}
                    value={
                      Array [
                        Object {
                          "key": "key1",
                          "label": "text1",
                        },
                        Object {
                          "key": "key2",
                          "label": "text2",
                        },
                        Object {
                          "key": "key4",
                          "label": "text4",
                        },
                      ]
                    }
                  >
                    <select
                      className="form-control list"
                      multiple={true}
                      size={15}
                    >
                      <option
                        key="key1"
                        onClick={[Function]}
                        value="key1"
                      >
                        text1
                      </option>
                      <option
                        key="key2"
                        onClick={[Function]}
                        value="key2"
                      >
                        text2
                      </option>
                      <option
                        key="key4"
                        onClick={[Function]}
                        value="key4"
                      >
                        text4
                      </option>
                    </select>
                  </List>
                </div>
              </Col>
              <Col
                bsClass="col"
                className="buttons-block"
                componentClass="div"
                md={2}
              >
                <div
                  className="buttons-block col-md-2"
                >
                  <div
                    className="spacer"
                  />
                  <div
                    className="spacer"
                  />
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move selected to right"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move selected to right"
                      type="button"
                    >
                      <Icon
                        name="angle-right"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-right"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-right fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move all to right"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move all to right"
                      type="button"
                    >
                      <Icon
                        name="angle-double-right"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-double-right"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-double-right fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move all to left"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move all to left"
                      type="button"
                    >
                      <Icon
                        name="angle-double-left"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-double-left"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-double-left fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                  <Button
                    active={false}
                    block={false}
                    bsClass="btn"
                    bsStyle="default"
                    className="btn-block dual-list-button"
                    disabled={false}
                    onClick={[Function]}
                    title="Move selected to left"
                    type="button"
                  >
                    <button
                      className="btn-block dual-list-button btn btn-default"
                      disabled={false}
                      onClick={[Function]}
                      title="Move selected to left"
                      type="button"
                    >
                      <Icon
                        name="angle-left"
                        size="lg"
                        type="fa"
                      >
                        <FontAwesome
                          name="angle-left"
                          size="lg"
                        >
                          <span
                            aria-hidden={true}
                            className="fa fa-angle-left fa-lg"
                          />
                        </FontAwesome>
                      </Icon>
                    </button>
                  </Button>
                </div>
              </Col>
              <Col
                bsClass="col"
                componentClass="div"
                md={5}
              >
                <div
                  className="col-md-5"
                >
                  Selected
                  <List
                    optionClick={[Function]}
                    size={15}
                    value={
                      Array [
                        Object {
                          "key": "key3",
                          "label": "text3",
                        },
                      ]
                    }
                  >
                    <select
                      className="form-control list"
                      multiple={true}
                      size={15}
                    >
                      <option
                        key="key3"
                        onClick={[Function]}
                        value="key3"
                      >
                        text3
                      </option>
                    </select>
                  </List>
                </div>
              </Col>
            </div>
          </Row>
        </div>
      </Grid>
    </div>
  </DualList>
</WrappedDualList>
`;
